--- a/pages/tag/index.module.scss
+++ b/pages/tag/index.module.scss
@@ -10,9 +10,10 @@
     .tags {
       display: flex;
       justify-content: flex-start;
+      flex-wrap: wrap;
     
       .tagWrapper {
-        width: 13.75rem;
+        width: 13.3rem;
         height: 12.5rem;
         border: 1px solid #f3f3f3;
         padding: 1.25rem;
